Add blog in front

--- a/src/FrontBundle/Resources/views/Default/index.html.twig
+++ b/src/FrontBundle/Resources/views/Default/index.html.twig
@@ -316,7 +316,6 @@
                             </div>
                         </div>
                     </div>
-                    {{ dump(lastArticle) }}
                     <!-- Section4 - BitWallet OUR ROADMAP -->
                     <div class="clearfix"></div>
                     <div id="to_roadmap" class="cryptic_ico_our_roadmap padding_top-80 text-center page-fill">
@@ -947,14 +946,15 @@
                                     <div class="spacer_80"></div>
                                     <div class="blog-posts simple-posts blog-posts-shortcode wow fadeIn">
                                         <div class="row">
+                                            {% for lastArticle in lastArticles %}
                                             <div class="col-xs-12 col-sm-6 col-md-4">
                                                 <article class="single-post list-view  no-padding no-margin">
                                                     <div class="blog_custom">
 
                                                         <!-- POST THUMBNAIL -->
                                                         <div class="col-md-12 post-thumbnail">
-                                                            <a class="relative" href="#"><img class="blog_post_image" src="assets/images/video-image-800x666.jpg" alt="What is Bitcoin Mining" /></a>
-                                                            <span class="time-n-date">8 Jan</span>
+                                                            <a class="relative" href="#"><img class="blog_post_image" src="{{ asset(lastArticle.image.webPath) }}" alt="What is Bitcoin Mining" /></a>
+                                                            <span class="time-n-date">{{lastArticle.date|date('d M')}}</span>
                                                         </div>
 
                                                         <!-- POST DETAILS -->
@@ -962,10 +962,10 @@
 
                                                             <div class="title-n-excerpt">
                                                                 <h3 class="post-name row">
-                                                                    <a href="#" title="What is Bitcoin Mining">What is Bitcoin Mining</a>
+                                                                    <a href="{{ path('view_article', {'idArticle' : lastArticle.id })}}" title="What is Bitcoin Mining">{{ lastArticle.content|striptags|truncate(30)|raw}}</a>
                                                                 </h3>
                                                                 <div class="post-excerpt row">
-                                                                    <p>Nemo enim ipsam voluptatem quia volup tas sit aspernatur aut odit aut fu sed quia conse quun tur magni dolor quia.</p>
+                                                                    <p>{{ lastArticle.content|striptags|truncate(100)|raw}}</p>
                                                                 </div>
                                                             </div>
 
@@ -979,70 +979,7 @@
                                                     </div>
                                                 </article>
                                             </div>
-                                            <div class="col-xs-12 col-sm-6 col-md-4">
-                                                <article class="single-post list-view  no-padding no-margin">
-                                                    <div class="blog_custom">
-
-                                                        <!-- POST THUMBNAIL -->
-                                                        <div class="col-md-12 post-thumbnail">
-                                                            <a class="relative" href="#"><img class="blog_post_image" src="assets/images/crytic_wp_theme3-800x666.jpg" alt="Bitcoin vs Ethereum" /></a>
-                                                            <span class="time-n-date">8 Jan</span>
-                                                        </div>
-
-                                                        <!-- POST DETAILS -->
-                                                        <div class="post-details col-md-12">
-
-                                                            <div class="title-n-excerpt">
-                                                                <h3 class="post-name row">
-                                                                    <a href="#" title="Bitcoin vs Ethereum">Bitcoin vs Ethereum</a>
-                                                                </h3>
-                                                                <div class="post-excerpt row">
-                                                                    <p>Nemo enim ipsam voluptatem quia volup tas sit aspernatur aut odit aut fu sed quia conse quun tur magni dolor quia.</p>
-                                                                </div>
-                                                            </div>
-
-                                                            <div class="text-element content-element">
-                                                                <p class="author">Post by <a href="#">Robert Downey</a></p>
-                                                                <p class="comments">No comments</p>
-                                                            </div>
-
-                                                        </div>
-
-                                                    </div>
-                                                </article>
-                                            </div>
-                                            <div class="col-xs-12 col-sm-6 col-md-4">
-                                                <article class="single-post list-view  no-padding no-margin">
-                                                    <div class="blog_custom">
-
-                                                        <!-- POST THUMBNAIL -->
-                                                        <div class="col-md-12 post-thumbnail">
-                                                            <a class="relative" href="#"><img class="blog_post_image" src="assets/images/bitcurrency_theme-2-800x666.jpg" alt="The Government versus Bitcoin" /></a>
-                                                            <span class="time-n-date">18 Dec</span>
-                                                        </div>
-
-                                                        <!-- POST DETAILS -->
-                                                        <div class="post-details col-md-12">
-
-                                                            <div class="title-n-excerpt">
-                                                                <h3 class="post-name row">
-                                                                    <a href="#" title="The Government versus Bitcoin">The Government versus Bitcoin</a>
-                                                                </h3>
-                                                                <div class="post-excerpt row">
-                                                                    <p>Nemo enim ipsam voluptatem quia volup tas sit aspernatur aut odit aut fu sed quia conse quun tur magni dolor quia.</p>
-                                                                </div>
-                                                            </div>
-
-                                                            <div class="text-element content-element">
-                                                                <p class="author">Post by <a href="#">Robert Downey</a></p>
-                                                                <p class="comments">No comments</p>
-                                                            </div>
-
-                                                        </div>
-
-                                                    </div>
-                                                </article>
-                                            </div>
+                                            {% endfor %}
                                         </div>
                                     </div>
                                 </div>
