--- a/src/FrontBundle/Resources/views/Default/blockchain.html.twig
+++ b/src/FrontBundle/Resources/views/Default/blockchain.html.twig
@@ -37,29 +37,9 @@
                     </span>
                 </div>
                 <div class="spacer_50"></div>
-                <div class="col-sm-6 vc_col-has-fill">
-                    <div class="wpb_single_image wpb_content_element vc_align_left wow fadeInLeft">
-                        <figure class="wpb_wrapper vc_figure">
-                            <div class="vc_single_image-wrapper   vc_box_border_grey">
-                                <img width="335" height="450" src="/bundles/front/assets/images/Vector-Smart-Object9_00.png" class="vc_single_image-img attachment-full" alt="Vector-Smart-Object9" />    
-                            </div>
-                        </figure>
-                    </div>
-                </div>
-                <div class="col-sm-6">
-                    <div class="title-subtile-holder wow fadeInRight text_left">
-                        <h1 class="section-title light_title no-margin">Product based on SMART CONTRACT</h1>
-                        <div class="spacer_10"></div>
-                        <div class="clearfix"></div>
-                        <div class="section-border green_border no-margin"></div>
-                        <div class="spacer_10"></div>
-                        <div class="section-subtitle light_subtitle">Smart contracts are computer programs which allow for the automatic transfer of digital assets between parties based upon pre-specified conditions. Smart contracts are computer programs which allow for the automatic transfer of digital assets between parties based upon pre-specified conditions.</div>
-                    </div>
-                    <div class="spacer_40"></div>
-                    {# <div class="text-center bitwallet-btn modeltheme_button wow fadeInRight">
-                        <a href="#" class="button-winona btn btn-medium btn_custom_blue_grad">READ MORE</a>
-                    </div> #}
-                </div>
+              <div>
+                  <img src="/bundles/front/assets/images/blockchain.png" alt="blockchain">
+              </div>
             </div>
         </div>
     </div>
