--- a/src/FrontBundle/Resources/views/Default/blockchain.html.twig
+++ b/src/FrontBundle/Resources/views/Default/blockchain.html.twig
@@ -21,9 +21,9 @@
                         <a href="#" class="button-winona btn btn-medium btn_custom_blue_grad">WHITEPAPPER</a>
                     </div> #}
                 </div>
-                <div class="col-sm-5">
+                <div class="col-sm-5" style="padding-top:90px;">
                     <figure class="fadeInRight wow">
-                        <img width="520" height="415" src="/bundles/front/assets/images/Vector-Smart-Object9_2.png" class="fadeInRight wow" alt="Vector-Smart-Object10"/>
+                        <img src="/bundles/front/assets/images/img.png" height="512" width="355" class="fadeInRight wow" alt="Vector-Smart-Object10"/>
                     </figure>
                 </div>
                 <div class="spacer_80"></div>
@@ -37,8 +37,8 @@
                     </span>
                 </div>
                 <div class="spacer_50"></div>
-              <div>
-                  <img src="/bundles/front/assets/images/blockchain.png" alt="blockchain">
+              <div style="text-align:center;">
+                  <img src="/bundles/front/assets/images/block2.png" alt="blockchain">
               </div>
             </div>
         </div>
