--- a/src/FrontBundle/Resources/views/Default/menu.html.twig
+++ b/src/FrontBundle/Resources/views/Default/menu.html.twig
@@ -10,10 +10,9 @@
         <div class="menu-one-page-container">
             <ul id="menu-one-page" class="menu">
 
-                <!-- <li class="menu-item menu-item-type-custom menu-item-object-custom"><a href="{{ path('homepage') }}">Home</a></li> -->
                 <li class="homepages-badge menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-ancestor current-menu-parent current_page_parent current_page_ancestor menu-item-has-children">
                     <a href="#">Crypto</a>
-                    <ul class="sub-menu">
+                    <ul class="sub-menu" style="background-color: transparent">
                         <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home"><a href="{{ path('default_bitcoin') }}">Bitcoin</a></li>
                         <li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="{{ path('default_litecoin') }}">Litecoin</a></li>
                         <li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="{{ path('default_ethereum') }}">Ethereum</a></li>
