image economie bitcoin

--- a/src/FrontBundle/Resources/views/Default/crypto_eco.html.twig
+++ b/src/FrontBundle/Resources/views/Default/crypto_eco.html.twig
@@ -7,7 +7,7 @@
  <div id="to_products" class="padding_top-80 text_center page-fill">
      <div class="container">
          <div class="row vc_row-has-fill">
-             <div class="col-sm-6">
+             <div class="col-sm-7">
                  <div class="title-subtile-holder wow fadeInLeft text_left">
                      <h1 class="section-title light_title no-margin">La crypto monnaie, une future révolution de l’économie mondiale</h1>
                      <div class="spacer_10"></div>
@@ -22,9 +22,9 @@
                      <a href="#" class="button-winona btn btn-medium btn_custom_blue_grad">WHITEPAPPER</a>
                  </div> #}
              </div>
-             <div class="col-sm-6"  style="padding-top:90px;">
+             <div class="col-sm-5"  style="padding-top:60px;">
                  <figure>
-                     <img width="520" height="415" src="/bundles/front/assets/images/Vector-Smart-Object9_2.png"  alt="Vector-Smart-Object10"/>
+                     <img src="/bundles/front/assets/images/eco-bitcoin.png"  alt="Vector-Smart-Object10"/>
                  </figure>
              </div>
              <div class="spacer_80"></div>
@@ -38,7 +38,7 @@
                  </span>
              </div>
              <div class="spacer_50"></div>
-             <div class="col-sm-6 vc_col-has-fill" style="margin-bottom:20px">
+             <div class="col-sm-5 vc_col-has-fill" style="margin-bottom:20px">
                  <div class="wpb_single_image wpb_content_element vc_align_left wow fadeInLeft">
                      <figure class="wpb_wrapper vc_figure">
                          <div class="vc_single_image-wrapper   vc_box_border_grey">
@@ -47,6 +47,7 @@
                      </figure>
                  </div>
              </div>
+             <div class="col-sm-1"></div>
              <div class="col-sm-6">
                  <div class="title-subtile-holder wow fadeInRight text_left">
                      <h1 class="section-title light_title no-margin">La crypto monnaie, quel enjeu pour le E-commerce ?</h1>
