--- a/src/FrontBundle/Resources/views/Default/index.html.twig
+++ b/src/FrontBundle/Resources/views/Default/index.html.twig
@@ -38,7 +38,7 @@
                                 </div>
                             </div>
                         </div>
-                        <section class="video-background high-margin data_background" data-background="assets/images/bitcoin.jpg">
+                        <section class="video-background high-margin data_background" data-background="/bundles/front/assets/images/video-1541600201.mp4">
                             <div class='video-bg'></div>
                             <a class="player" data-property="{videoURL:'6OTG8E_mtcE',containment:'.video-bg',autoPlay:true, mute:true, startAt:0,opacity:1,ratio:'16/9',showControls:false,showYTLogo:false,quality:'hd1080'}"></a>
                         </section>
