--- a/src/FrontBundle/Resources/views/Default/index.html.twig
+++ b/src/FrontBundle/Resources/views/Default/index.html.twig
@@ -38,6 +38,12 @@
                                 </div>
                             </div>
                         </div>
+                        <div style="text-align:center; background-color:rgb(22,17,84);">
+                            <img border="0" width="75%" src="/bundles/front/assets/images/cyptex.gif" alt="Animation Cryptex">
+                        </div>
+                        </div>
+            
+                       
                     <!-- Section2 - BitWallet Token sale stats -->
                     <div class="clearfix"></div>
                         <div id="to_token_sale" class="padding_top-80 text_center page-fill">
